--- a/Android/res/xml/authenticator.xml
+++ b/Android/res/xml/authenticator.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <account-authenticator
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:accountType="nawrasg.fr"
+    android:accountType="fr.nawrasg.atlantis"
     android:userVisible="true"
     android:icon="@drawable/home"
     android:label="@string/app_name"
