--- a/Android/res/xml/widget_door_lock.xml
+++ b/Android/res/xml/widget_door_lock.xml
@@ -4,6 +4,7 @@
                     android:initialLayout="@layout/widget_door_lock"
                     android:minHeight="40dp"
                     android:minWidth="40dp"
+                    android:updatePeriodMillis="3600000"
                     android:previewImage="@drawable/ng_door"
                     android:resizeMode="none">
 </appwidget-provider>
