--- a/Android/res/layout/fragment_sensors.xml
+++ b/Android/res/layout/fragment_sensors.xml
@@ -2,19 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="vertical"
-              android:padding="15dp">
+              android:orientation="vertical">
 
-    <Spinner
-        android:id="@+id/spSensorsType"
+    <ExpandableListView
+        android:id="@+id/listSensorsList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:visibility="gone"/>
-
-    <ListView
-        android:id="@android:id/list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
