--- a/Android/res/layout/fragment_sensors.xml
+++ b/Android/res/layout/fragment_sensors.xml
@@ -7,6 +7,7 @@
     <ExpandableListView
         android:id="@+id/listSensorsList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:groupIndicator="@null"/>
 
 </LinearLayout>
