Change to blue color

--- a/Android/res/layout/widget_door_lock.xml
+++ b/Android/res/layout/widget_door_lock.xml
@@ -8,5 +8,6 @@
         android:id="@+id/btnWidgetDoorLockAction"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@android:color/holo_blue_dark"
         android:src="@drawable/ng_door"/>
 </LinearLayout>
