--- a/Android/res/values-v21/styles.xml
+++ b/Android/res/values-v21/styles.xml
@@ -5,9 +5,9 @@
         AppBaseTheme from BOTH res/values/styles.xml and
         res/values-v11/styles.xml on API 14+ devices.
     -->
-    <style name="AppBaseTheme" parent="android:Theme.Material.Light">
-        <item name="android:colorPrimary">@android:color/holo_blue_dark</item>
-        <item name="android:colorPrimaryDark">@android:color/holo_blue_dark</item>
+    <style name="AppBaseTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@android:color/holo_blue_dark</item>
+        <item name="colorPrimaryDark">@android:color/holo_blue_dark</item>
     </style>
 
 </resources>
