--- a/Android/res/xml/pref_connection.xml
+++ b/Android/res/xml/pref_connection.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <PreferenceCategory
-        android:summary="@string/xml_pref_connection_settings_summary"
-        android:title="@string/xml_pref_connection_settings_title" >
+    <PreferenceCategory>
         <EditTextPreference
             android:icon="@drawable/ic_action_network_cell"
             android:key="urlExterne"
