--- a/Android/res/xml/pref_divers.xml
+++ b/Android/res/xml/pref_divers.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <PreferenceCategory>
+    <PreferenceCategory android:title="@string/xml_pref_main_divers_title">
         <Preference
             android:icon="@drawable/ic_action_import_export"
             android:key="import"
