--- a/Android/res/values-v21/styles.xml
+++ b/Android/res/values-v21/styles.xml
@@ -8,6 +8,7 @@
     <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@android:color/holo_blue_dark</item>
         <item name="colorPrimaryDark">@android:color/holo_blue_dark</item>
+        <item name="android:navigationBarColor">@android:color/holo_blue_dark</item>
     </style>
 
 </resources>
