--- a/Android/res/xml/widget_scenario.xml
+++ b/Android/res/xml/widget_scenario.xml
@@ -5,5 +5,5 @@
                     android:minHeight="40dp"
                     android:minWidth="40dp"
                     android:previewImage="@drawable/ng_scenario"
-                    android:resizeMode="none">
+                    android:resizeMode="horizontal">
 </appwidget-provider>
