--- a/Android/res/layout/fragment_dialog_plant_info.xml
+++ b/Android/res/layout/fragment_dialog_plant_info.xml
@@ -5,18 +5,19 @@
               android:orientation="vertical"
               android:padding="20dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:labelFor="@+id/txtPlantDialogTitle"
-        android:text="@string/layout_fragment_dialog_plant_info_name"/>
-
-    <EditText
-        android:id="@+id/txtPlantDialogTitle"
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:inputType="text"/>
+        android:layout_marginBottom="20dp">
+
+        <EditText
+            android:id="@+id/txtPlantDialogTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/layout_fragment_dialog_plant_info_name"
+            android:inputType="text"/>
+
+    </android.support.design.widget.TextInputLayout>
 
     <TextView
         android:layout_width="wrap_content"
