--- a/Android/res/layout/fragment_gps.xml
+++ b/Android/res/layout/fragment_gps.xml
@@ -12,24 +12,24 @@
         android:layout_marginBottom="30dp"
         android:text="@string/layout_fragment_gps_geo_turn_on"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/layout_fragment_gps_define_home"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/txtGPScoord"
-            android:layout_width="wrap_content"
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.75"
-            android:editable="false"
-            android:hint="@string/layout_fragment_gps_coords"/>"
+            android:layout_weight="0.75">
+
+            <EditText
+                android:id="@+id/txtGPScoord"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/layout_fragment_gps_define_home"/>"
+
+        </android.support.design.widget.TextInputLayout>
 
         <ImageButton
             android:id="@+id/btnGPSPosition"
@@ -39,25 +39,26 @@
             android:src="@drawable/ic_action_location_found"/>
     </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="@string/layout_fragment_gps_define_circle"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/txtGPSradius"
-            android:layout_width="wrap_content"
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.75"
-            android:hint="@string/layout_fragment_gps_radius_hint"
-            android:inputType="number"/>
+            android:layout_weight="0.75">
+
+            <EditText
+                android:id="@+id/txtGPSradius"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/layout_fragment_gps_define_circle"
+                android:inputType="number"/>
+
+        </android.support.design.widget.TextInputLayout>
 
         <ImageButton
             android:id="@+id/btnGPSRadius"
@@ -71,6 +72,7 @@
         android:id="@+id/btnGPSClear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="@string/layout_fragment_gps_clear_data"/>
 
 </LinearLayout>
