--- a/Android/res/menu/activity_main.xml
+++ b/Android/res/menu/activity_main.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/itemMainActivitySpeech"
         android:icon="@drawable/ic_action_mic"
-        app:showAsAction="always"
+        android:title="Assistant vocal"
         android:visible="false"
-        android:title="Assistant vocal"/>
+        app:showAsAction="always"/>
 
 </menu>
