--- a/Android/res/menu/fragment_devices.xml
+++ b/Android/res/menu/fragment_devices.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/itemDevicesAdd"
         android:icon="@drawable/ic_action_new"
-        android:showAsAction="always"
-        android:title="@string/menu_fragment_devices_add"/>
+        android:title="@string/menu_fragment_devices_add"
+        app:showAsAction="always"/>
 
 </menu>
