--- a/Android/res/menu/fragment_gps.xml
+++ b/Android/res/menu/fragment_gps.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
+    <!--<item
         android:id="@+id/itemGPSOptions"
         android:icon="@drawable/ic_action_storage"
-        android:showAsAction="ifRoom"
-        android:title="@string/menu_fragment_gps_options"/>
+        android:title="@string/menu_fragment_gps_options"
+        app:showAsAction="ifRoom"/>-->
 
     <item
         android:id="@+id/itemGPSMap"
         android:icon="@drawable/ic_action_map"
-        android:showAsAction="ifRoom"
-        android:title="@string/menu_fragment_gps_map"/>
+        android:title="@string/menu_fragment_gps_map"
+        app:showAsAction="ifRoom"/>
 
 </menu>
