--- a/Android/res/menu/fragment_maps.xml
+++ b/Android/res/menu/fragment_maps.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/itemMapsRefresh"
         android:icon="@drawable/ic_action_refresh"
-        android:showAsAction="ifRoom"
-        android:title="@string/menu_refresh"/>
+        android:title="@string/menu_refresh"
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/itemMapsRequest"
         android:icon="@drawable/ic_action_send_now"
-        android:showAsAction="ifRoom"
-        android:title="@string/menu_fragment_maps_request"/>
+        android:title="@string/menu_fragment_maps_request"
+        app:showAsAction="ifRoom"/>
 
 </menu>
