--- a/Android/res/menu/fragment_music.xml
+++ b/Android/res/menu/fragment_music.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
+    <!--<item
         android:id="@+id/itemMusicSpeech"
         android:icon="@drawable/ic_action_volume_on"
-        android:showAsAction="always"
-        android:title="@string/menu_music_vocal_message"/>
+        android:title="@string/menu_music_vocal_message"
+        app:showAsAction="always"/>-->
     <item
         android:id="@+id/itemMusicRefresh"
         android:icon="@drawable/ic_action_refresh"
-        android:showAsAction="ifRoom"
-        android:title="@string/menu_refresh"/>
+        android:title="@string/menu_refresh"
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/itemMusicOn"
         android:checkable="true"
-        android:showAsAction="never"
-        android:title="@string/menu_music_on"/>
+        android:title="@string/menu_music_on"
+        app:showAsAction="never"/>
     <item
         android:id="@+id/itemMusicWelcomeMusic"
         android:checkable="true"
         android:icon="@drawable/ic_action_headphones"
-        android:showAsAction="never"
-        android:title="@string/menu_music_welcome_music"/>
+        android:title="@string/menu_music_welcome_music"
+        app:showAsAction="never"/>
 
 </menu>
