--- a/Setup/app/views/main.html
+++ b/Setup/app/views/main.html
@@ -1,23 +1,26 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
+<md-whiteframe class="md-whiteframe-z1" layout="column" style="width:500px;min-height:200px;display:block;margin:auto">
+	<md-toolbar>
+      <div class="md-toolbar-tools">
+          <img alt="" src="images/atlantis.png" style="margin-right:20px">
+        <h2><span>Atlantis</span></h2>
+        <span flex=""></span>
+        <md-button class="md-icon-button" aria-label="install" ng-click="install()">
+          <img alt="go" src="images/ic_file_download_white_24px.svg">
+        </md-button>
+      </div>
+    </md-toolbar>
+    <div style="padding:20px" layout=column>
+		<md-input-container flex>
+	   		<label>Host address</label>
+			<input ng-model="db.host">
+		</md-input-container>
+		<md-input-container flex>
+	   		<label>Username</label>
+			<input ng-model="db.username">
+		</md-input-container>
+		<md-input-container flex>
+	   		<label>Password</label>
+			<input ng-model="db.password">
+		</md-input-container>
+    </div> 
+</md-whiteframe>
