--- a/Android/res/menu/fragment_gps.xml
+++ b/Android/res/menu/fragment_gps.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!--<item
+    <item
         android:id="@+id/itemGPSOptions"
         android:icon="@drawable/ic_action_storage"
         android:title="@string/menu_fragment_gps_options"
-        app:showAsAction="ifRoom"/>-->
+        app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/itemGPSMap"
