--- a/Android/res/layout/fragment_sensors.xml
+++ b/Android/res/layout/fragment_sensors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                              android:id="@+id/swipeSensors"
+                                              android:layout_width="match_parent"
+                                              android:layout_height="match_parent">
 
     <ExpandableListView
         android:id="@+id/listSensorsList"
@@ -10,4 +10,4 @@
         android:layout_height="wrap_content"
         android:groupIndicator="@null"/>
 
-</LinearLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
