--- a/Android/res/layout/activity_settings.xml
+++ b/Android/res/layout/activity_settings.xml
@@ -22,7 +22,9 @@
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
             android:theme="@style/ThemeOverlay.AppCompat.Dark"
-            app:tabGravity="fill"/>
+            app:tabGravity="fill"
+            app:tabIndicatorColor="@android:color/white"
+            app:tabIndicatorHeight="5dp"/>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/vpSettingsViewPager"
