--- a/Android/res/values/styles.xml
+++ b/Android/res/values/styles.xml
@@ -6,4 +6,12 @@
         <item name="colorPrimaryDark">@android:color/holo_blue_dark</item>
     </style>
 
+    <style name="intro_edittext" parent="TextAppearance.AppCompat">
+        <item name="android:textColorHint">@color/white</item>
+        <item name="android:textSize">17sp</item>
+        <item name="colorAccent">@color/white</item>
+        <item name="colorControlNormal">@color/white</item>
+        <item name="colorControlActivated">@color/white</item>
+    </style>
+
 </resources>
