--- a/Android/res/values/array.xml
+++ b/Android/res/values/array.xml
@@ -11,4 +11,18 @@
         <item>viber</item>
         <item>silence</item>
     </string-array>
+    <string-array name="log_level">
+        <item>Verbose</item>
+        <item>Debug</item>
+        <item>Info</item>
+        <item>Warn</item>
+        <item>Error</item>
+    </string-array>
+    <string-array name="log_level_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+    </string-array>
 </resources>
