--- a/Android/res/xml/pref_divers.xml
+++ b/Android/res/xml/pref_divers.xml
@@ -30,4 +30,14 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory android:title="@string/xml_pref_divers_log_section">
+        <SwitchPreference
+            android:icon="@drawable/ic_check_circle_black_24dp"
+            android:key="log"
+            android:title="@string/xml_pref_divers_log_activate_title"/>
+        <Preference
+            android:icon="@drawable/ic_description_black_24dp"
+            android:title="@string/xml_pref_divers_log_title"/>
+    </PreferenceCategory>
+
 </PreferenceScreen>
