--- a/Android/res/layout/row_light.xml
+++ b/Android/res/layout/row_light.xml
@@ -1,44 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:descendantFocusability="blocksDescendants"
-              android:orientation="vertical"
-              android:padding="10dp">
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cvLight"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:layout_marginEnd="10dp"
+    android:layout_marginStart="10dp"
+    android:layout_marginTop="16dp"
+    card_view:cardCornerRadius="5dp"
+    card_view:cardElevation="5dp"
+    card_view:cardMaxElevation="15dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:descendantFocusability="blocksDescendants"
+        android:orientation="vertical"
+        android:padding="10dp">
 
-        <ImageView
-            android:id="@+id/imgLightIcon"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:contentDescription="icon"/>
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/lblLightName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:textStyle="bold"/>
+            <ImageView
+                android:id="@+id/imgLightIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="icon"/>
 
-        <Switch
-            android:id="@+id/swtLightToggle"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/lblLightName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:textStyle="bold"/>
+
+            <Switch
+                android:id="@+id/swtLightToggle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textOff="@string/layout_row_lights_switch_off"
+                android:textOn="@string/layout_row_lights_switch_on"/>
+        </LinearLayout>
+
+        <SeekBar
+            android:id="@+id/sbLightIntensity"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textOff="@string/layout_row_lights_switch_off"
-            android:textOn="@string/layout_row_lights_switch_on"/>
+            android:layout_marginTop="10dp"
+            android:max="254"/>
+
     </LinearLayout>
-
-    <SeekBar
-        android:id="@+id/sbLightIntensity"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:max="254"/>
-
-</LinearLayout>
+</android.support.v7.widget.CardView>
