--- a/Android/res/layout/fragment_courses.xml
+++ b/Android/res/layout/fragment_courses.xml
@@ -5,9 +5,10 @@
                                               android:layout_height="match_parent"
                                               android:keepScreenOn="true">
 
-    <ListView
-        android:id="@android:id/list"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvCourses"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"/>
 
 </android.support.v4.widget.SwipeRefreshLayout>
