--- a/Android/res/values/dimens.xml
+++ b/Android/res/values/dimens.xml
@@ -4,5 +4,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="activity_margin">16dp</dimen>
+    <dimen name="kitchen_item_height">60dp</dimen>
+    <dimen name="kitchen_item_width">10dp</dimen>
 
 </resources>
