--- a/Android/res/layout/row_kitchen.xml
+++ b/Android/res/layout/row_kitchen.xml
@@ -14,9 +14,15 @@
     card_view:cardElevation="5dp"
     card_view:cardMaxElevation="5dp">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <View
+            android:id="@+id/imgCuisineExpiry"
+            android:layout_width="@dimen/kitchen_item_width"
+            android:layout_height="@dimen/kitchen_item_height"
+            android:layout_alignParentEnd="true"/>
 
         <ImageView
             android:id="@+id/imgCuisineIcon"
@@ -28,7 +34,7 @@
             android:padding="10dp"/>
 
         <ImageView
-            android:id="@+id/imgCuisineIcon2"
+            android:id="@+id/imgCuisinePlace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/imgCuisineIcon"
@@ -61,6 +67,7 @@
             android:layout_marginRight="30dp"
             android:background="@drawable/qte"
             android:gravity="center"/>
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
