Switch to Kitchen Fragment

--- a/Android/res/menu/fragment_kitchen.xml
+++ b/Android/res/menu/fragment_kitchen.xml
@@ -18,6 +18,6 @@
         android:checkable="true"
         android:icon="@drawable/ic_reorder_white_24dp"
         android:title="@string/menu_fragment_cuisine_show_all"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="never"/>
 
 </menu>
