--- a/Android/res/values-land/integers.xml
+++ b/Android/res/values-land/integers.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="courses_layout">2</integer>
+    <integer name="fragment_widgets_column">2</integer>
 </resources>
