--- a/Android/res/layout/row_light.xml
+++ b/Android/res/layout/row_light.xml
@@ -26,6 +26,12 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
+            <CheckBox
+                android:id="@+id/cbLightDashboard"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"/>
+
             <ImageView
                 android:id="@+id/imgLightIcon"
                 android:layout_width="wrap_content"
